Fix spacing between some items

--- a/weblate_web/static/style.css
+++ b/weblate_web/static/style.css
@@ -1192,11 +1192,6 @@ section.pricing .pricing-tabs li,
   border-radius: 30px;
 }
 
-html[dir="rtl"] section.pricing .pricing-tabs li,
-html[dir="rtl"] .pricing-table-tabs-menu ul li {
-  margin-right: 0;
-}
-
 section.pricing .pricing-tabs li {
   float: none;
   display: inline-block;
@@ -2957,7 +2952,6 @@ html[dir="rtl"] .pricing-table {
 
 html[dir="rtl"] .pricing-table-top {
   float: right;
-  padding: 10px 20px 15px 50px;
   left: -25px;
   right: unset;
 }
